network.tf
data "aws_availability_zones" "available" {}
resource "aws_vpc" "default" {
  cidr_block = var.vpc_cidr_block

  tags = {
    Name = var.vpc_name
  }
}

resource "aws_subnet" "web" {
  count             = length(var.web_subnets_cidr_blocks)
  vpc_id            = aws_vpc.default.id
  availability_zone = data.aws_availability_zones.available.names[count.index]
  cidr_block        = var.web_subnets_cidr_blocks[count.index]

  tags = {
    Name = count.index
  }

}

resource "aws_subnet" "app" {
  count             = length(var.app_subnets_cidr_blocks)
  vpc_id            = aws_vpc.default.id
  availability_zone = data.aws_availability_zones.available.names[count.index]
  cidr_block        = var.app_subnets_cidr_blocks[count.index]

  tags = {
    Name = count.index
  }

}

resource "aws_subnet" "db" {
  count             = length(var.public_subnets_cidr_blocks)
  vpc_id            = aws_vpc.default.id
  availability_zone = data.aws_availability_zones.available.names[count.index]
  cidr_block        = var.db_subnets_cidr_blocks[count.index]

  tags = {
    Name = count.index
  }

}

# Create an internet gateway to give our subnet access to the outside world
resource "aws_internet_gateway" "default" {
  vpc_id = aws_vpc.default.id

  tags = {
    Name = var.vpc_name
  }
}

# Create public subnet for common resources like NAT Gateway etc.
resource "aws_subnet" "public" {
  count             = length(var.public_subnets_cidr_blocks)
  vpc_id            = aws_vpc.default.id
  availability_zone = data.aws_availability_zones.available.names[count.index]
  cidr_block        = var.public_subnets_cidr_blocks[count.index]

  tags = {
    Name = count.index
  }
}

# Create Route tables for public layer
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.default.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.default.id
  }

  tags =  {
    Name = "Public"
  }
}

resource "aws_route_table_association" "public" {
  count          = length(var.public_subnets_cidr_blocks)
  subnet_id      = element(aws_subnet.public.*.id, count.index)
  route_table_id = aws_route_table.public.id
}

# Create Elastic IP for NAT gateway
resource "aws_eip" "nat_eip" {
  vpc = true

  tags = {
    Name = "Nat Gateway IP"
  }
}

# Create an NAT gateway to give our private subnets to access to the outside world

resource "aws_nat_gateway" "default" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = element(aws_subnet.public.*.id, 0)

  tags = {
    Name = var.vpc_name
  }
}

# Create Route tables for web layer
resource "aws_route_table" "web" {
  vpc_id = aws_vpc.default.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.default.id
  }

  tags =  {
    Name = "Web"
  }
}

resource "aws_route_table_association" "web" {
  count          = length(var.web_subnets_cidr_blocks)
  subnet_id      = element(aws_subnet.web.*.id, count.index)
  route_table_id = aws_route_table.web.id
}

# Create Route tables for App layer

resource "aws_route_table" "app" {
  vpc_id = aws_vpc.default.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.default.id
  }

  tags =  {
    Name = "App"
  }
}

resource "aws_route_table_association" "app" {
  count          = length(var.app_subnets_cidr_blocks)
  subnet_id      = element(aws_subnet.app.*.id, count.index)
  route_table_id = aws_route_table.app.id
}

# Create Route tables for App layer

resource "aws_route_table" "db" {
  vpc_id = aws_vpc.default.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.default.id
  }

  tags =  {
    Name = "DB"
  }
}

resource "aws_route_table_association" "db" {
  count          = length(var.db_subnets_cidr_blocks)
  subnet_id      = element(aws_subnet.db.*.id, count.index)
  route_table_id = aws_route_table.db.id
}
